--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
     <title>Tic Tac Toe</title>
   </head>
   <body>
-    <div class="player-box">
-      <input class="player-name" type="text" placeholder="">
-    </div>
-    <button id="start-game" class="btn">New Game</button>
+    <header class="around-board">
+      <div class="player-box pb0">
+        <input class="player-name-0" type="text" placeholder="">
+      </div>
+      <button id="start-game" class="btn">New Game</button>
+      <div class="player-box pb1">
+        <input class="player-name-1" type="text" placeholder="">
+      </div>
+    </header>
     <div id="board">
       <div id="spot-0"><p></p></div>
       <div id="spot-1"><p></p></div>
